tests/cpp/internal/negative_case/bad_scope_for_init_leak.cpp
// Negative test: names declared in a for-init scope must not be visible after
// the loop.
int main() {
  for (int i = 0; i < 1; ++i) {
  }

  return i;
}
